adicionando parametros no swagger para inserir cliente
